--- a/personal-budget/src/app/article/article.component.html
+++ b/personal-budget/src/app/article/article.component.html
@@ -1,4 +1,4 @@
 <article>
   <ng-content select="h1"></ng-content>
-  <p><ng-content select="slot-two"></ng-content></p>
+  <p><ng-content select="p"></ng-content></p>
 </article>
